# simulated-av-lane-assist

./: .gitignore  LICENSE  README.md  cpp_build.yml  environment.yml
.github/workflows/: cpp_build.yml
data/: Data_README.md
data/all_data/run_v1_CarClose2Centre/: labels.csv
data/all_data/run_v2_Diversified_WiderRangeOffsets/: labels.csv
data/all_data/run_v3_Diversified_RandomCARSPEED/: labels.csv
data/all_data/run_v4_VariedCameraPosition/: labels.csv
data/all_data/run_v5_CurveMovement/: labels.csv
data/all_data/run_v6_DiversifiedCurvedMovement/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v01/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v02/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v03/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v04/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v05/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v06/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v07/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v08/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v09/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v10/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v11/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v12/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v13/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v14/: labels.csv
data/all_data/run_v7_DiversifiedCurvedMovement_v15/: labels.csv
models/: best_lane_keeping_model.pth  entire_lane_keeping_model.pth  nvidia_pilotnet.onnx
notebooks/: deep-learning-for-simulated-driving.ipynb
run_v1_CarClose2Centre/: labels.csv
src/cpp/: CMakeLists.txt  README_inference.md  inference_real.cpp  inference_test.cpp
src/python/: combine_data.py  data_generator.py  data_generator_car_moving_circle.py  data_generator_v05.py  model_export.py  simulator.py
